--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 					<span onclick="document.getElementById('myModal').style.display='none'" class="w3-button w3-large w3-display-topright">&times;</span>
 				</div>
 				<div class="w3-container">
-					 <object data="Shashank_Mishra.pdf#zoom=100" type="application/pdf" width="100%" height="570px"> 
-						<p>It appears you don't have a PDF plugin for this browser.
-						No biggie... you can <a href="1.pdf">click here to
-						download the PDF file.</a></p>
+					 <object data="docs/Shashank_Mishra.pdf#zoom=100" type="application/pdf" width="100%" height="570px"> 
+						<p>It appears you are using mobile device. No biggie... you can <a href="docs/Shashank_Mishra.pdf#zoom=50" target="_blank">view it over here.</a></p>
 					</object>
 				</div>
 				<div class="w3-container w3-teal">
