Changed Object to iframe.
Changed Object to iframe.

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 					<span onclick="document.getElementById('myModal').style.display='none'" class="w3-button w3-large w3-display-topright">&times;</span>
 				</div>
 				<div class="w3-container">
-					 <object data="docs/Shashank_Mishra.pdf#zoom=100" type="application/pdf" width="100%" height="570px"> 
-						<p>It appears you are using mobile device. No biggie... you can <a href="docs/Shashank_Mishra.pdf#zoom=50" target="_blank">view it over here.</a></p>
-					</object>
+					 <iframe src="docs/Shashank_Mishra.pdf#zoom=100" type="application/pdf" width="100%" height="570px"> 
+						<p>It appears you are using mobile device. No biggie... you can <a href="docs/Shashank_Mishra.pdf#zoom=50" target="_blank">download it over here.</a></p>
+					</iframe>
 				</div>
 				<div class="w3-container w3-teal">
 					<button type="w3-button" class="w3-btn w3-round-xxlarge w3-teal w3-right w3-border w3-round" onclick="document.getElementById('myModal').style.display='none'">Close</button>
