Uncomment the Github fa image section in footer.
Uncomment the Github fa image section in footer.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p>Find me on social media.</p>
 	<a href="https://www.linkedin.com/in/imshashank" class="fa fa-linkedin w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
 	<a href="https://twitter.com/shashank_io" class="fa fa-twitter w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
-	<!-- <a href="https://github.com/Yamank" class="fa fa-github w3-hover-opacity" style="text-decoration:none;" target="_blank"></a> -->
+	<a href="https://github.com/Yamank" class="fa fa-github w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
 	<a href="https://www.instagram.com/shashank.io/" class="fa fa-instagram w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
 	<a href="https://plus.google.com/+ShashankMishra_io" class="fa fa-google-plus w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
   
