Updated the Title.
Updated the current designation in Website Title.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116555372-1"></script>
 	
-	<title>Shashank Mishra | ThingWorx IOT & AR Developer | SR. Analyst/Software Engineer</title>
+	<title>Shashank Mishra | ThingWorx IOT & AR Developer | Associate Consultant</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
