--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>PTC ThingWorx Developer / GE Power Conversion</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017 - April 2018 <!-- <span class="w3-tag w3-teal w3-round">Current</span> --></h6>
           <p>Worked on various change requests of application to achieve extension of application features. Estimated and planned the change requests in coordination with client and team. Grabbed acknowledgement and performed other operational tasks for the application. Performed Unit & Functional testing after the application get updated.</p>
           <hr>
         </div>
