Added a new button
Added a new button for Face Recognition Page.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 		<a href="docs/Shashank_Mishra.pdf" target="_blank">
 			<button type="button" class="w3-btn w3-round-xxlarge w3-teal">Resume</button>
 		</a>
+		<a href="FaceRecognition.html" target="_blank">
+			<button type="button" class="w3-btn w3-round-xxlarge w3-teal">Face Recognition</button>
+		</a>
 		  
           <hr>
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
