--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	<a href="https://twitter.com/shashank_io" class="fa fa-twitter w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
 	<a href="https://github.com/Yamank" class="fa fa-github w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
 	<a href="https://www.instagram.com/shashank.io/" class="fa fa-instagram w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
-	<a href="https://plus.google.com/+ShashankMishra_io" class="fa fa-google-plus w3-hover-opacity" style="text-decoration:none;" target="_blank"></a>
+	<!-- <a href="https://plus.google.com/+ShashankMishra_io" class="fa fa-google-plus w3-hover-opacity" style="text-decoration:none;" target="_blank"></a> -->
   
   <p>Copyright &copy; 2018 <a href="#" style="text-decoration:none;">Shashank Mishra</a></p>
 </footer>
