--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-
-	gtag('config', 'UA-116555372-1');
+	
+	gtag('config', 'UA-116555372-1', { 'optimize_id': 'GTM-5KFJQ66'});
 </script>
 </body>
 </html>
