--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116555372-1"></script>
 	
-	<title>Shashank Mishra | ThingWorx IOT & AR Developer | Senior Associate Consultant</title>
+	<title>Shashank Mishra | ThingWorx IOT & AR Developer | Software Engineer</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -33,8 +33,8 @@
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Senior Associate Consultant</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Chandigarh, India</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Bengaluru, India</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>mishra0shashank@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91-9528505442</p>
 		  
@@ -59,11 +59,15 @@
               <div class="w3-center w3-text-white">85%</div>
             </div>
           </div>
-          <p>Creo Illustrator</p>
+	  <p>ThingWorx Flow</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:85%">85%</div>
+          </div>
+	  <p>ThingWorx Navigate</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
           </div>
-          <p>SSRS</p>
+          <p>Creo Illustrator</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
           </div>
@@ -91,6 +95,14 @@
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+	<div class="w3-container">
+          <h5 class="w3-opacity"><b>PTC ThingWorx Developer / Volvo Group India Private Limited</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2022 - Current Date <!-- <span class="w3-tag w3-teal w3-round">Current</span> --></h6>
+          	<p>Wrote and developed new and well-tested code for different software projects.</p>
+		<p>Evaluated project requirements, identified challenges and proposed alternatives using research and data.</p>
+		<p>Aligned projects with requirements and specifications to deliver above benchmark results.</p>
+          <hr>
+        </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>PTC ThingWorx Developer / GE Power Conversion</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2017 - April 2018 <!-- <span class="w3-tag w3-teal w3-round">Current</span> --></h6>
